<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_commands</name>
  <version>1.0.0</version>
  <description>PS4 controller interface for Terra4Mars rover</description>
  <maintainer email="software@epfl-xplore.ch">EPFL Xplore</maintainer>
  <license>MIT</license>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-pygame</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
